
11) Don't show 'OLD' capabilities if they are not available.

12) Attempt to flag use of '-' as a port-range separator.

13) Add undocumented OPTIMIZE=-1 setting.

14) Replace OPTIMIZE=-1 with undocumented optimize 4096 which DISABLES
    default optimizations.

15) Add support for UDPLITE

16) Distinguish between 'Started' and 'Restored' in ${VARDIR}/state

Changes in Shorewall 4.4.7

1)  Backport optimization changes from 4.5.

2)  Backport two new options from 4.5.

3)  Backport TPROXY from 4.5

4)  Add TC_PRIOMAP to shorewall*.conf

5)  Implement LOAD_HELPERS_ONLY

6)  Avoid excessive module loading with LOAD_HELPERS_ONLY=Yes

7)  Fix case where MARK target is unavailable.

8)  Change default to ADD_IP_ALIASES=No

9)  Correct defects in generate_matrix().

10) Fix and optimize 'nosmurfs'.

11) Use 'OLD_HL_MATCH' to suppress use of 'flow' in Simple TC.

Changes in Shorewall 4.4.6

1)  Fix for rp_filter and kernel 2.6.31.

2)  Add a hack to work around a bug in Lenny + xtables-addons

3)  Re-enable SAVE_IPSETS

4)  Allow both <...> and [...] for IPv6 Addresses.

5)  Port mark geometry change from 4.5.

6)  Add Macro patch from Tuomo Soini

7)  Add 'show macro' command.

8)  Add -r option to check.

9)  Port simplified TC from 4.5.

Changes in Shorewall 4.4.5

1)  Fix 15-port limit removal change.

2)  Fix handling of interfaces with the 'bridge' option.

3)  Generate error for port number 0

4)  Allow zone::serverport in rules DEST column.

5)  Fix 'show policies' in Shorewall6.

6)  Auto-load tc modules.

7)  Allow LOGFILE=/dev/null

8)  Fix shorewall6-lite/shorecap

9) Fix MODULE_SUFFIX.

10) Fix ENHANCED_REJECT detection for IPv4.

11) Fix DONT_LOAD vs 'reload -c'

12) Fix handling of SOURCE and DEST vs macros.

13) Remove silly logic in expand_rule().

14) Add current and limit to Conntrack Table Heading.

Changes in Shorewall 4.4.4

1)  Change STARTUP_LOG and LOG_VERBOSITY in default shorewall6.conf.

2)  Fix access to uninitialized variable.
