@@ -33,6 +33,8 @@ Changes in Shorewall 4.4.8
 
 16) Distinguish between 'Started' and 'Restored' in ${VARDIR}/state
 
+17) Issue warnings when 'blacklist' but no blacklist file entries.
+
 Changes in Shorewall 4.4.7
 
 1)  Backport optimization changes from 4.5.
